fix: pinyin-only words had wrong vertical alignment on mac

--- a/xiep/web/client-source/style-document.less
+++ b/xiep/web/client-source/style-document.less
@@ -70,7 +70,8 @@ input {
       height: @fntSizeHanzi * 1.5;
     }
     &.alfa div.hanzi {
-      font-size: @fntSizePinyin; height: (@fntSizeHanzi + @fntSizePinyin) * 1.5;
+      font-size: @fntSizePinyin; font-family: @fntBaseFamily;
+      height: (@fntSizeHanzi + @fntSizePinyin) * 1.5;
       span { padding-top: @fntSizeHanzi * 1.5; }
     }
     div.pinyin {
